--- a/website/newsletter/240/index.mdx
+++ b/website/newsletter/240/index.mdx
@@ -60,7 +60,7 @@ Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thiswee
 - 📦 [Astro 5.10 - Experimental live collections that can be fetched at runtime instead of build time](https://astro.build/blog/astro-5100/)
 - 📦 [RedwoodSDK 0.1 \- React framework for building server-side web apps on Cloudflare](https://github.com/redwoodjs/sdk/releases/tag/v0.1.0)
 - 📦 [State in URL 5.0 \- Query Params lib adds Remix support](https://github.com/asmyshlyaev177/state-in-url/releases/tag/v5.0.0)
-- 🎥 [Vercel Ship 2025](https://vercel.com/ship): The keynote announcements are more platform/backend/AI-related, but there are a few talks about [Next.js](http://Next.js).
+- 🎥 [Vercel Ship 2025](https://vercel.com/ship): The keynote announcements are more platform/backend/AI-related, but there are a few talks about Next.js.
 
 <SubscribeFormEmbed placement="middle" />
 
