--- a/website/newsletter/241/index.mdx
+++ b/website/newsletter/241/index.mdx
@@ -85,7 +85,28 @@ Designed specifically for testing, Wallaby features include a **Time Travel Debu
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Nitro modules banner](/emails/issues/241/nitro.jpg)](https://nitro.margelo.com/)
+
+**Nitro Week**
+
+[Nitro Modules](https://nitro.margelo.com/) are trending among React Native lib developers, with 3 new releases this week:
+
+- 📦 [React Native Nitro Image \- Superfast in-memory Image type and view component for React Native](https://github.com/mrousavy/react-native-nitro-image): Marc Rousavy releasing his new Image library that allows resizing/croping images without any file IO and should integrate later with VisionCamera (that will also use Nitro in the future).
+- 📦 [React Native Video 7.0 alpha \- Rebuilt with Nitro modules, faster, supports preloading and player separated from view](https://github.com/TheWidlarzGroup/react-native-video/releases/tag/v7.0.0-alpha.0)
+- 📦 [React Native HealthKit 9.0 \- Rebuilt with Nitro modules, improving performance and type-safety](https://github.com/kingstinct/react-native-healthkit/releases/tag/%40kingstinct%2Freact-native-healthkit%409.0.0)
+
+---
+
+- 🌐 In other universes, 🎥 [Compose Multiplatform for iOS is ready for production](https://www.youtube.com/watch?v=YKTlW8Qkj0w), based on Kotlin/Skia. And 📣 [Swift announced an Android Working Group](https://forums.swift.org/t/announcing-the-android-workgroup/80666) and its intent to support the Android platform officially. I doubt this will significantly compete with React Native but it’s worth to be aware of\!
+- 👀 [React Native PR \- background-size, position and repeat styles](https://github.com/facebook/react-native/pull/52284)
+- 📜 [React Native Legal \- CLI & programmatic API \- A unified tooling for license attributions](https://www.callstack.com/blog/react-native-legal-cli-programmatic-api---unified-tooling-for-license-attributions)
+- 📦 [React Native Skia 2.1 \- Skottie support, new image filters, perspective camera for 2d scenes](https://github.com/Shopify/react-native-skia/releases/tag/v2.1.0): Lottie animations are now supported out of the box ([docs](https://shopify.github.io/react-native-skia/docs/skottie/)). It can compose with other Skia drawings, unlike [react-native-skottie](https://github.com/margelo/react-native-skottie).
+- 📦 [Expo Router AI App Generator](https://github.com/EvanBacon/app-that-builds-apps): Evan built an app that can build other Expo apps and websites.
+- 📦 [Gesture Handler 2.27 \- Complete `Pressable` refactor, deprecate `ForceTouch` gesture](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.27.0)
+- 📦 [React Native Fast Confetti 1.0 \- Based on Skia Atlas API](https://github.com/AlirezaHadjar/react-native-fast-confetti/releases/tag/v1.0.0)
+- 🎥 [Expo \- Build a Local-First Sketch App with Expo, Instant & Reanimated](https://www.youtube.com/watch?v=DEJIcaGN3vY)
+- 🎙️ [Rocket Ship 74 \- Expo AI App Template, Icon Creator, Background Tasks, RSC & Triathlon Success](https://share.transistor.fm/s/512935c9)
+- 🎙️ [RNR 336 \- RLRN: Building Boca Socios with Solito ft. Nahue Alberti](https://infinite.red/react-native-radio/rnr-336-rlrn-building-boca-socios-with-solito-ft-nahue-alberti)
 
 ---
 
