--- a/website/newsletter/241/index.mdx
+++ b/website/newsletter/241/index.mdx
@@ -40,13 +40,20 @@ Try Embrace today and get your first 1 million sessions free. Learn more at [emb
 
 ## ⚛️ React {#react}
 
+[![Remixing Shopify's Admin: How We Made It 30% Faster and AI-Ready](/emails/issues/241/remix.jpg)](https://shopify.engineering/remixing-admin)
+
+**[Remixing Shopify's Admin: How We Made It 30% Faster and AI-Ready](https://shopify.engineering/remixing-admin)**
+
+Interesting feedback from Shopify migrating their flagship Admin app to Remix, dogfooding the framework on a massive codebase with strong needs in terms of scalability. It looks to me many recent React Router features were things Shopify actually needed.
+
+---
+
 - 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 - 📖 [TanStack Start \- Cloudflare Workers docs](https://developers.cloudflare.com/workers/framework-guides/web-apps/tanstack/)
 - 🐦 [Radix kicking off a weekly stream to show how Radix is developed and maintained](https://x.com/radix_ui/status/1940123605272244674): A good transparency move from the WorkOS team, probably in reaction to last week’s [“Radis is a liability”](https://x.com/ccccjjjjeeee/status/1935163290998722660) drama. Meanwhile, its upcoming competitor BaseUI released [beta.1](https://github.com/mui/base-ui/releases/tag/v1.0.0-beta.1).
 - 🐦 [Guillermo Rauch \- “All areweturboyet.com tests are passing for Next.js production builds“](https://x.com/rauchg/status/1938668763525849298): So far, only dev builds were stable, but we can expect an upcoming Next.js release announcing much faster and production builds on Turbopack instead of Webpack. Note that [Rspack 1.4 also announced \~99% coverage of dev/production builds](https://rspack.rs/blog/announcing-1-4#next-rspack), and it will be interesting to see which tool performs faster once both bundlers are at 100%.
 - 🐦 [Ryan Florence is studying React alternativese](https://x.com/ryanflorence/status/1938994450035789941) and [Michael Jackson is growing increasingly disillusioned with React hooks](https://x.com/mjackson/status/1937979887815692465), and it looks like they are brainstorming publicly what they plan to build for Remix v3, likely based on a fork of Preact.
 - 😠 Alex Russell [rants about React Summit talks](https://infrequently.org/2025/06/conferences-clarity-and-smokescreens/) and Mario says [React Still Feels Insane](https://mbrizic.com/blog/react-is-insane/).
-- 📜 [Remixing Shopify's Admin: How We Made It 30% Faster and AI-Ready](https://shopify.engineering/remixing-admin): Interesting feedback from Shopify migrating their massive flagship Admin app to Remix. It looks to me many recent React Router features were things Shopify actually needed.
 - 📜 [The time is right for a DOM templating API](https://justinfagnani.com/2025/06/26/the-time-is-right-for-a-dom-templating-api/): Interesting thoughts on the lack of a templating language in JS from one of the original creators of Lit (Web Components), who also created a [proposal based on tagged template literals](https://justinfagnani.com/2025/06/30/what-should-a-dom-templating-api-look-like/). This also discusses how all this could integrate with React and JSX.
 - 📜 [Next.js Promise Racing](https://playfulprogramming.com/posts/nextjs-promise-race): A really cool trick if you want to fully resolve promises on the server, unless they take too long, in which case it’s nice to show a Suspense fallback.
 - 📜 [Astro Live Content Collections: A Deep Dive](https://astro.build/blog/live-content-collections-deep-dive/)
