--- a/website/newsletter/242/index.mdx
+++ b/website/newsletter/242/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /242
-title: "This Week In React #242: Vite RSC, NuxtLabs, Next.js, Valtio Reactive, React Query, Shadcn, react-hook-from, TanStack/router, Lexical, React Email, Recharts, XState | Unistyles, React Native Rag, Shadow Insets, Ignite 11, Metro, RN 0.81 RC | CSS Gaps, TS Satisfies, TS 5.9 Beta, Browserlist-rs, Biome, Astro, esbuild"
+title: "This Week In React #242: Vite RSC, NuxtLabs, Next.js, Valtio Reactive, React Query, Shadcn, React Hook From, TanStack Router, React Email, Recharts | Unistyles, RN RAG, Shadow Insets, Ignite 11, Metro, RN 0.81 RC | CSS Gaps, TS Satisfies, TS 5.9 Beta, Biome, Astro, esbuild"
 authors: [piaskowyk, kacperkapusciak]
 date: 07-09-2025
 unlisted: true
@@ -47,7 +47,6 @@ import Support from "../_support.mdx";
 ## ⚛️ React {#react}
 
 - 💸 [PostHog - We built an AI envoy, you can too](https://go.posthog.com/twir-jul9)
-- 💸 [Add secure digital signatures to your React app with Apryse SDK - simplify e-signing for contracts and more!](https://apryse.com/blog/integrate-digital-signatures-react-applications?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_09&utm_content=email_textlink)
 - 👀 [NuxtLabs joins Vercel](https://vercel.com/blog/nuxtlabs-joins-vercel): Vercel has acquired NuxtLab \- an organization responsible for maintaining Nitro and Nuxt. The creator of SolidJS pointed out that [many metaframeworks are now under Vercel’s influence](https://x.com/RyanCarniato/status/1942653782715949151).  
 - 👀 [Next.js PR – Generate route types manifest](https://github.com/vercel/next.js/pull/81396): A proposed change to Next.js to automatically generate types for all app's routes, making them globally available without needing imports. This would provide immediate type safety, an IDE autocompletion for page props and layout slots, which would help to catch routing errors early.  
 - 👀 [Next.js PR \- forward browser errors/logs to terminal](https://github.com/vercel/next.js/pull/80909)  
@@ -59,6 +58,7 @@ import Support from "../_support.mdx";
 - ​​📜 [Infinite Queries in React Query](https://tigerabrodi.blog/infinite-queries-in-react-query): Showcase of how `useInfiniteQuery` from React Query can simplify implementing infinite scroll.  
 - 📜 [The Tyranny of Tiny Modules in React and Next.js codebases](https://javascript.plainenglish.io/the-tyranny-of-tiny-modules-d42cbd8e1e17): The author questions the "keep all React’s modules small" approach, pointing out that sanity should sometimes take precedence over overly restrictive rules \- choose what is best for your team. While I don't agree with everything the author said, I still think it can broaden someone's perspective.  
 - 📜 [Deep dive into state and useState](https://www.56kode.com/posts/level-up-react-deep-dive-into-state-and-usestate/): It covers the area of React’s state management that you might not need on a daily basis, but it's really good to know because this knowledge can help you solve edge cases.  
+- 💸 [Add secure digital signatures to your React app with Apryse SDK - simplify e-signing for contracts and more!](https://apryse.com/blog/integrate-digital-signatures-react-applications?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_09&utm_content=email_textlink)
 - 📦 [@vitejs/plugin-rsc – React Server Components (RSC) support for Vite](https://github.com/vitejs/vite-plugin-react/issues/531): now officially available on npm under the `@vitejs` org  
 - 📦 [shadcn 2.8 – Init & add components, themes, hooks from local JSON files](https://github.com/shadcn-ui/ui/releases/tag/shadcn%402.8.0)   
 - 📦 [react-hook-form 7.60 – New keepFieldsRef option for avoiding re-registering input reference after reset()](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.60.0)   
@@ -137,7 +137,5 @@ React Native Unistyles 3.0 is now stable. It’s a styling library written in C+
 [![alt](/emails/issues/242/meme1.jpg)](https://x.com/kacperkapusciak/status/1940767250128294030)
 
 [![alt](/emails/issues/242/meme2.jpg)](https://x.com/DavidKPiano/status/1941261793864843575)
-
-[![alt](/emails/issues/242/meme3.jpg)](https://x.com/bunjavascript/status/1942400645757296705)
 
 See ya! 👋
