--- a/website/newsletter/242/index.mdx
+++ b/website/newsletter/242/index.mdx
@@ -46,16 +46,15 @@ import Support from "../_support.mdx";
 ## ⚛️ React {#react}
 
 - 💸 [PostHog - We built an AI envoy, you can too](https://go.posthog.com/twir-jul9)
-  <<<<<<< HEAD
 - 👀 [NuxtLabs joins Vercel](https://vercel.com/blog/nuxtlabs-joins-vercel): Vercel has acquired NuxtLab \- an organization responsible for maintaining Nitro and Nuxt. The creator of SolidJS pointed out that [many metaframeworks are now under Vercel’s influence](https://x.com/RyanCarniato/status/1942653782715949151).
 - 👀 [Next.js PR – Generate route types manifest](https://github.com/vercel/next.js/pull/81396): A proposed change to Next.js to automatically generate types for all app's routes, making them globally available without needing imports. This would provide immediate type safety, an IDE autocompletion for page props and layout slots, which would help to catch routing errors early.
 - 👀 [Next.js PR \- forward browser errors/logs to terminal](https://github.com/vercel/next.js/pull/80909)
 - 🐦 Alex Sidorenko taught us [how to secure your Next.js server actions](https://x.com/asidorenko_/status/1941863623300645344)
-- ​​💬 [How does Facebook serve React pages? (r/reactjs)](https://www.reddit.com/r/reactjs/comments/1ltbw2e/how_does_facebook_serve_react_pages/): Surprisingly, they use the Hermes engine \- the React Native runtime \- to run React web SSR\!
+- 💬 [How does Facebook serve React pages? (r/reactjs)](https://www.reddit.com/r/reactjs/comments/1ltbw2e/how_does_facebook_serve_react_pages/): Surprisingly, they use the Hermes engine \- the React Native runtime \- to run React web SSR\!
 - 📜 [Introducing valtio-reactive: a Reactive Library Built on Valtio](https://newsletter.daishikato.com/p/introducing-valtio-reactive-a-reactive-library-built-on-valtio): Describes how the global state management library Valito is enriched with missing reactivity and observability features.
 - 📜 [The History of React Through Code](https://playfulprogramming.com/posts/react-history-through-code): Great breakdown of how React has evolved into its mature form, highlighting the pros and cons of chosen approaches over time. It traces React's evolution from its early days with JSX and the Virtual DOM to modern features like Hooks, Suspense, and Server Components, demonstrating how each improvement builds upon core React principles.
 - 📜 [How to test React Server Component](https://www.nico.fyi/blog/how-to-test-react-server-component): Since there is no official way to test RSC, people have come up with some crazy ideas on how to do it. This one is not a recommended approach; it's extremely hacky but clever enough to be worth seeing.
-- ​​📜 [Infinite Queries in React Query](https://tigerabrodi.blog/infinite-queries-in-react-query): Showcase of how `useInfiniteQuery` from React Query can simplify implementing infinite scroll.
+- 📜 [Infinite Queries in React Query](https://tigerabrodi.blog/infinite-queries-in-react-query): Showcase of how `useInfiniteQuery` from React Query can simplify implementing infinite scroll.
 - 📜 [The Tyranny of Tiny Modules in React and Next.js codebases](https://javascript.plainenglish.io/the-tyranny-of-tiny-modules-d42cbd8e1e17): The author questions the "keep all React’s modules small" approach, pointing out that sanity should sometimes take precedence over overly restrictive rules \- choose what is best for your team. While I don't agree with everything the author said, I still think it can broaden someone's perspective.
 - 📜 [Deep dive into state and useState](https://www.56kode.com/posts/level-up-react-deep-dive-into-state-and-usestate/): It covers the area of React’s state management that you might not need on a daily basis, but it's really good to know because this knowledge can help you solve edge cases.
 - 💸 [Add secure digital signatures to your React app with Apryse SDK - simplify e-signing for contracts and more!](https://apryse.com/blog/integrate-digital-signatures-react-applications?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_09&utm_content=email_textlink)
@@ -68,31 +67,8 @@ import Support from "../_support.mdx";
 - 📦 [Recharts 3.1 \- New `useOffset` and `usePlotArea`, `useActiveTooltipDataPoints`](https://github.com/recharts/recharts/releases/tag/v3.1.0)
 - 📦 [XState/store 3.8 – Undo/redo functionality](https://github.com/statelyai/xstate/releases/tag/%40xstate%2Fstore%403.8.0)
 - 🎥 [Theo – Review of “React feels insane” article](https://www.youtube.com/watch?v=DLa2FQQzCr4)
-- # 🎥 [Ryan Carniato – How Signals can improve React](https://www.youtube.com/watch?v=VgGl9i-OBBI)
-- 👀 [NuxtLabs joins Vercel](https://vercel.com/blog/nuxtlabs-joins-vercel): Vercel has acquired NuxtLab \- an organization responsible for maintaining Nitro and Nuxt. The creator of SolidJS pointed out that [many metaframeworks are now under Vercel’s influence](https://x.com/RyanCarniato/status/1942653782715949151) (now including TanStack Start).
-- 👀 [Next.js PR – Generate route types manifest](https://github.com/vercel/next.js/pull/81396): A proposed change to Next.js to automatically generate types for all app's routes, making them globally available without needing imports. This would provide immediate type safety, an IDE autocompletion for page props and layout slots, which would help to catch routing errors early.
-- 👀 [Next.js PR \- Forward browser errors/logs to terminal](https://github.com/vercel/next.js/pull/80909)
-- 🐦 Alex Sidorenko taught us [how to secure your Next.js server actions](https://x.com/asidorenko_/status/1941863623300645344)
-- ​​💬 [How does Facebook serve React pages? (r/reactjs)](https://www.reddit.com/r/reactjs/comments/1ltbw2e/how_does_facebook_serve_react_pages/): Surprisingly, they use the Hermes engine \- the React Native runtime \- to run React web SSR\!
-- 📜 [The History of React Through Code](https://playfulprogramming.com/posts/react-history-through-code): Great breakdown of how React has evolved into its mature form, highlighting the pros and cons of chosen approaches over time. It traces React's evolution from its early days with JSX and the Virtual DOM to modern features like Hooks, Suspense, and Server Components, demonstrating how each improvement builds upon core React principles.
-- 📜 [How to test React Server Component](https://www.nico.fyi/blog/how-to-test-react-server-component): Since there is no official way to test RSC, people have come up with some crazy ideas on how to do it. This one is not a recommended approach; it's extremely hacky but clever enough to be worth seeing.
-- 📜 [Introducing valtio-reactive: a Reactive Library Built on Valtio](https://newsletter.daishikato.com/p/introducing-valtio-reactive-a-reactive-library-built-on-valtio): Describes how the global state management library Valito is enriched with missing reactivity and observability features.
-- 📜 [The Tyranny of Tiny Modules in React and Next.js codebases](https://javascript.plainenglish.io/the-tyranny-of-tiny-modules-d42cbd8e1e17): The author questions the "keep all React’s modules small" approach, pointing out that sanity should sometimes take precedence over overly restrictive rules \- choose what is best for your team. While I don't agree with everything the author said, I still think it can broaden someone's perspective.
-- 📜 [Deep dive into state and useState](https://www.56kode.com/posts/level-up-react-deep-dive-into-state-and-usestate/): It covers the area of React’s state management that you might not need on a daily basis, but it's really good to know because this knowledge can help you solve edge cases.
-- 📜 [Infinite Queries in React Query](https://tigerabrodi.blog/infinite-queries-in-react-query): Showcase of how `useInfiniteQuery` from React Query can simplify implementing infinite scroll.
-- 💸 [Add secure digital signatures to your React app with Apryse SDK - simplify e-signing for contracts and more!](https://apryse.com/blog/integrate-digital-signatures-react-applications?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_09&utm_content=email_textlink)
-- 📦 [@vitejs/plugin-rsc – React Server Components (RSC) support for Vite](https://github.com/vitejs/vite-plugin-react/issues/531): now officially available on npm under the `@vitejs` org.
-- 📦 [TanStack/router 1.125 \- Selective SSR](https://tanstack.com/start/latest/docs/framework/react/selective-ssr): Gives the ability to define where the component renders and where `loader` and `beforeLoad` executes on a per route basis.
-- 📦 [shadcn CLI 2.8 – Init & add components, themes, hooks from local JSON files](https://ui.shadcn.com/docs/changelog)
-- 📦 [React-Hook-Form 7.60 – New keepFieldsRef option for avoiding re-registering input reference after reset()](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.60.0)
-- 📦 [Lexical 0.33 \- Extensible text editor framework](https://github.com/facebook/lexical/releases/tag/v0.33.0)
-- 📦 [React-Email 4.1 \- Separate package for storing the preview server](https://github.com/resend/react-email/releases/tag/react-email%404.1.0)
-- 📦 [Recharts 3.1 \- New `useOffset` and `usePlotArea`, `useActiveTooltipDataPoints`](https://github.com/recharts/recharts/releases/tag/v3.1.0)
-- 📦 [XState/store 3.8 – Undo/redo functionality](https://github.com/statelyai/xstate/releases/tag/%40xstate%2Fstore%403.8.0)
-- 🎥 [Theo – Review of “React feels insane” article](https://www.youtube.com/watch?v=DLa2FQQzCr4)
 - 🎥 [Ryan Carniato – How Signals can improve React](https://www.youtube.com/watch?v=VgGl9i-OBBI)
-  > > > > > > > 01e3348 (242)
-- 🎙️ [React Universe On Air – The evolution of the TanStack ecosystem with Tanner Linslay](https://www.youtube.com/watch?v=2L4tlUIqLho)
+- 👀 [NuxtLabs joins Vercel](https://vercel.com/blog/nuxtlabs-joins-vercel): Vercel has acquired NuxtLab \- an organization responsible for maintaining Nitro and Nuxt. The creator of SolidJS pointed out that [many metaframeworks are now under Vercel’s influence](https://x.com/RyanCarniato/status/1942653782715949151) (now including TanStack Start).
 
 <SubscribeFormEmbed placement="middle" />
 
