--- a/website/newsletter/242/index.mdx
+++ b/website/newsletter/242/index.mdx
@@ -60,7 +60,7 @@ import Support from "../_support.mdx";
 - 💸 [Add secure digital signatures to your React app with Apryse SDK - simplify e-signing for contracts and more!](https://apryse.com/blog/integrate-digital-signatures-react-applications?utm_source=newsletter&utm_medium=email&utm_campaign=thisweekinreact_2025_07_09&utm_content=email_textlink)
 - 📦 [@vitejs/plugin-rsc – React Server Components (RSC) support for Vite](https://github.com/vitejs/vite-plugin-react/issues/531): now officially available on npm under the `@vitejs` org
 - 📦 [shadcn 2.8 – Init & add components, themes, hooks from local JSON files](https://github.com/shadcn-ui/ui/releases/tag/shadcn%402.8.0)
-- 📦 [react-hook-form 7.60 – New keepFieldsRef option for avoiding re-registering input reference after reset()](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.60.0)
+- 📦 [react-hook-form 7.60 – New `keepFieldsRef` option for avoiding re-registering input reference after reset()](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.60.0)
 - 📦 [Lexical 0.33 \- Extensible text editor framework](https://github.com/facebook/lexical/releases/tag/v0.33.0)
 - 📦 [TanStack/router 1.125 \- Selective SSR](https://tanstack.com/start/latest/docs/framework/react/selective-ssr): Gives the ability to define where the component renders and where `loader` and `beforeLoad` executes on a per route basis.
 - 📦 [React-Email 4.1 \- Separate package for storing the preview server](https://github.com/resend/react-email/releases/tag/react-email%404.1.0)
