--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -26,6 +26,10 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
+[![Next.js 15.4](/emails/issues/243/nextjs.png)](https://nextjs.org/blog/next-15-4)
+
+[**Next.js 15.4**](https://nextjs.org/blog/next-15-4)
+
 <Todo />
 
 <SubscribeFormEmbed placement="middle" />
@@ -39,6 +43,14 @@ import Support from "../_support.mdx";
 ---
 
 ## 📱 React-Native {#react-native}
+
+[![Node-API Support for React Native](/emails/issues/243/nodeapi.jpg)](https://www.callstack.com/blog/announcing-node-api-support-for-react-native)
+
+[**Node-API Support for React Native**](https://www.callstack.com/blog/announcing-node-api-support-for-react-native)
+
+[![Introducing react-native-wallet](/emails/issues/243/rnwallet.png)](https://blog.swmansion.com/introducing-react-native-wallet-90c1ee103d3e)
+
+[**Introducing react-native-wallet**](https://blog.swmansion.com/introducing-react-native-wallet-90c1ee103d3e)
 
 <Todo />
 
@@ -54,6 +66,6 @@ import Support from "../_support.mdx";
 
 <Todo />
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/243/meme.jpg)](https://x.com/thekitze/status/1943289841887641937)
 
 See ya! 👋
