--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -6,9 +6,15 @@ date: 07-16-2025
 unlisted: true
 ---
 
-Hi everyone!
+Hi everyone! **Tomek and Tymek from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here! 👋
 
-<Todo />
+This week, we're coming with some interesting announcements and even more noteworthy news. Next.js 15.4 has been announced, bringing Turbopack support and stability improvements.
+
+On the React Native side, 0.81 is getting closer and closer to us as the new release candidate shows and there’s a couple of new announcements around react-native-worklets, react-native-wallet and Module Federation Metro and Node API support for React Native.
+
+I hope you are already excited, because there is much more interesting news to come.
+
+Let's get into it!
 
 <!-- truncate -->
 
